--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     },
     "dependencies": {
         "@lucide/svelte": "^0.559.0",
-        "@tauri-apps/api": "^2.9.1"
+        "@tauri-apps/api": "^2.9.1",
+        "client-zip": "^2.5.0"
     },
     "devDependencies": {
         "@sveltejs/adapter-static": "^3.0.6",
