fixed pwa theme

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -2,8 +2,8 @@
     "name": "Wolffia",
     "short_name": "Wolffia",
     "description": "E2EE Note-taking Workspace",
-    "theme_color": "#4fb35e",
-    "background_color": "#ffffff",
+    "theme_color": "#1f2937",
+    "background_color": "#1f2937",
     "display": "standalone",
     "scope": "/",
     "start_url": "/",
