--- a/nginx.conf
+++ b/nginx.conf
@@ -104,8 +104,20 @@ http {
 
         # SSE endpoint for real-time updates
         location /events {
-            # CORS for SSE
+            # CORS preflight for SSE (EventSource may trigger preflight with some browsers)
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' $cors_origin always;
+                add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept, Cache-Control, Last-Event-ID' always;
+                add_header 'Access-Control-Max-Age' 86400;
+                add_header 'Content-Length' 0;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                return 204;
+            }
+
+            # CORS for SSE actual requests
             add_header 'Access-Control-Allow-Origin' $cors_origin always;
+            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept, Cache-Control, Last-Event-ID' always;
             
             # SSE-specific headers
             add_header 'Content-Type' 'text/event-stream';
